chore: 폰트 파일 수정

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,1 +1,122 @@
 // 폰트 수정 예정. 폰트 수정은 추후에 해주세요
+@font-face {
+  font-display: swap;
+  font-family: 'Pretendard';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../public/fonts/Pretendard-Regular.woff2') format('woff2'),
+    url('../public/fonts/Pretendard-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Pretendard';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../public/fonts/Pretendard-Medium.woff2') format('woff2'),
+    url('../public/fonts/Pretendard-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Pretendard';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../public/fonts/Pretendard-SemiBold.woff2') format('woff2'),
+    url('../public/fonts/Pretendard-SemiBold.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Pretendard';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../public/fonts/Pretendard-Bold.woff2') format('woff2'),
+    url('../public/fonts/Pretendard-Bold.woff') format('woff');
+}
+
+//수정 예정
+
+$TEXT_STYLES: (
+  '3xl': (
+    font-size: 32px,
+    line-height: 42px,
+  ),
+  '2xl': (
+    font-size: 24px,
+    line-height: 32px,
+  ),
+  'xl': (
+    font-size: 20px,
+    line-height: 32px,
+  ),
+  '2lg': (
+    font-size: 18px,
+    line-height: 26px,
+  ),
+  'lg': (
+    font-size: 16px,
+    line-height: 26px,
+  ),
+  'md': (
+    font-size: 14px,
+    line-height: 24px,
+  ),
+  'sm': (
+    font-size: 13px,
+    line-height: 22px,
+  ),
+  'xs': (
+    font-size: 12px,
+    line-height: 18px,
+  ),
+);
+
+$WEIGHTS: (
+  'bold': 700,
+  'semibold': 600,
+  'medium': 500,
+  'regular': 400,
+);
+
+@mixin font-style(
+  $desktop-size,
+  $weight,
+  $tablet-size: null,
+  $mobile-size: null
+) {
+  -webkit-font-smoothing: antialiased;
+
+  // 데스크탑에서 폰트 사이즈 및 폰트 웨이트 적용
+  @if map-has-key($TEXT_STYLES, $desktop-size) {
+    $style: map-get($TEXT_STYLES, $desktop-size);
+    font-size: map-get($style, font-size);
+    line-height: map-get($style, line-height);
+  } @else {
+    font-size: #{$desktop-size}px;
+  }
+
+  @if map-has-key($WEIGHTS, $weight) {
+    font-weight: map-get($WEIGHTS, $weight);
+  } @else {
+    font-weight: #{$weight};
+  }
+
+  // 태블릿에서 폰트 사이즈 적용
+  @include tablet {
+    @if $tablet-size != null {
+      font-size: #{$tablet-size}px;
+    } @else {
+      font-size: #{$desktop-size}px;
+    }
+  }
+
+  // 모바일에서 폰트 사이즈 적용
+  @include mobile {
+    @if $mobile-size != null {
+      font-size: #{$mobile-size}px;
+    } @else {
+      font-size: #{$desktop-size}px;
+    }
+  }
+}
