style: 반응형 gap 믹스인 추가

--- a/styles/mixins/_common.scss
+++ b/styles/mixins/_common.scss
@@ -28,3 +28,15 @@ $desktop-min: 1200px;
     @content;
   }
 }
+
+@mixin ResponsiveGap($desktop, $tablet, $mobile) {
+  gap: #{$desktop}px;
+
+  @include tablet {
+    gap: #{$tablet}px;
+  }
+
+  @include mobile {
+    gap: #{$mobile}px;
+  }
+}
