style: 반응형 line-height 반응형 추가

--- a/styles/mixins/_common.scss
+++ b/styles/mixins/_common.scss
@@ -40,3 +40,15 @@ $desktop-min: 1200px;
     gap: #{$mobile}px;
   }
 }
+
+@mixin ResponsiveLineHeight($desktop, $tablet, $mobile) {
+  line-height: #{$desktop}px;
+
+  @include tablet {
+    line-height: #{$tablet}px;
+  }
+
+  @include mobile {
+    line-height: #{$mobile}px;
+  }
+}
