--- a/styles/mixins/_common.scss
+++ b/styles/mixins/_common.scss
@@ -52,3 +52,20 @@ $desktop-min: 1200px;
     line-height: #{$mobile}px;
   }
 }
+
+@mixin Size($width, $height: $width) {
+  width: $width;
+  height: $height;
+}
+
+//rem 사이즈 구할때 사용?
+@function CalculateRem($size) {
+  $remSize: $size / 16px;
+  @return $remSize * 1rem;
+}
+
+@mixin border-radius($value) {
+  -webkit-border-radius: $value;
+  -moz-border-radius: $value;
+  border-radius: $value;
+}
