--- a/containers/dashboard/id/column/Column.module.scss
+++ b/containers/dashboard/id/column/Column.module.scss
@@ -49,7 +49,7 @@
   @include Flex(column, null, null);
   @include ResponsiveGap(16, 16, 10);
 
-  button {
+  button > div {
     justify-content: center;
   }
 }
