feat: 공통 헤더 기본형 추가

--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -9,7 +9,7 @@
   left: 0;
 
   width: 100%;
-  @include Height(70px, 70px, 60px);
+  @include Height(70px);
   @include Padding(0 70px, 0 40px, 0 24px);
   border-bottom: 1px solid $gray-d9;
 
