feat: 할일 모달 데이터 연결 및 상태/담당자 드롭다운 컴포넌트 구현 (#31)
* style: column 카드 리스트 스크롤 속성 추가

* style: 공백 및 프래그먼트 제거

* feat: 할일 모달 데이터 연결

* feat: 댓글 컴포넌트 생성

* refactor: getDate 함수 수정

* refactor: ManagerCard 컴포넌트 수정

* refactor: useColumnList 수정

* style: 카드 컴포넌트 hover 커서 스타일 추가

* style: todo 모달 스타일 수정

* feat: 드롭다운 컴포넌트 추가 및 케밥 드롭다운 수정

* feat: 상태, 담당자 드롭다운 구현

--- a/containers/dashboard/id/column/Column.module.scss
+++ b/containers/dashboard/id/column/Column.module.scss
@@ -46,6 +46,7 @@
 
 .card-list {
   overflow-y: auto;
+  overscroll-behavior: none;
   @include Flex(column, null, null);
   @include ResponsiveGap(16, 16, 10);
 
