--- a/containers/dashboard/id/modals/todoModal/TodoModal.module.scss
+++ b/containers/dashboard/id/modals/todoModal/TodoModal.module.scss
@@ -1,4 +1,5 @@
-@import '@/styles/index.scss';
+@import '@/styles/index';
+@import '@/styles/mixins/mixinModal';
 
 .top-button {
   background-color: transparent;
@@ -12,8 +13,12 @@
   width: 730px;
   border-radius: 8px;
   background-color: $white;
-  border: 1px solid $black-17;
+
   padding: 32px 28px;
+
+  @include ModalStyle;
+  max-height: 90%;
+  overflow-y: auto;
 }
 
 .modal-wrapper {
@@ -52,16 +57,23 @@
   @include Flex(column, null, null);
   gap: 16px;
   max-width: 450px;
+  width: 100%;
 }
 
 .contents-text {
+  width: 96%;
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
+  min-height: 90px;
 }
 
-.sampleImg {
-  width: 100%;
+.content-img {
+  width: 90%;
+  border-radius: 8px;
+  @include mobile {
+    width: 100%;
+  }
 }
 
 .comment-input-container {
@@ -86,62 +98,6 @@
   resize: none;
 }
 
-.comment-card {
-  display: flex;
-  gap: 10px;
-
-  .profile-img {
-    width: 34px;
-    height: 34px;
-  }
-
-  .comment-contents {
-    @include Flex(column, null, null);
-    gap: 6px;
-
-    .writer-and-date {
-      @include Flex(row, null, center);
-      gap: 8px;
-    }
-
-    .writer {
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 16px;
-    }
-
-    .date {
-      font-size: 12px;
-      font-weight: 400;
-      line-height: 14px;
-      color: $gray-9f;
-    }
-
-    .comment-text {
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 16px;
-      color: $black-33;
-    }
-
-    .edit-and-delete {
-      @include Flex(row, null, null);
-      gap: 12px;
-      margin-top: 6px;
-
-      .button {
-        text-decoration: underline;
-        background-color: transparent;
-        padding: 0;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 15px;
-        color: $gray-9f;
-      }
-    }
-  }
-}
-
 @include tablet {
   .modal-container {
     max-width: 678px;
@@ -152,9 +108,6 @@
   }
   .sampleImg {
     width: 420px;
-  }
-  .contents-text {
-    width: 349px;
   }
 }
 
@@ -207,23 +160,34 @@
   .empty-block {
     display: block;
   }
+}
 
-  .comment-contents {
-    gap: 16px;
-  }
-  .writer {
-    font-size: 12px;
-    line-height: 14px;
-  }
-  .date {
-    font-size: 10px;
-  }
-  .comment-text {
-    font-size: 12px;
-    line-height: 18px;
-  }
-  .button {
-    font-size: 10px;
-    line-height: 12px;
+.chips {
+  @include Flex(row, null, center);
+  gap: 20px;
+}
+
+.border {
+  width: 1px;
+  height: 20px;
+  background-color: $gray-d9;
+}
+
+.chip-card-list {
+  @include Flex(row, null, center);
+  gap: 6px;
+}
+
+.kebab {
+  position: relative;
+
+  & > article {
+    position: absolute;
+    top: 28px;
+    right: 0;
+
+    ul {
+      background-color: $white;
+    }
   }
 }
