style: 버튼 색 수정

--- a/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
+++ b/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
@@ -116,9 +116,10 @@
   color: $gray-78;
   background-color: $white;
 
-  &.violet {
+  &.yellow {
     color: $white;
-    background-color: $violet;
+    background-color: $main-yellow;
+    border: 1px solid $main-yellow;
   }
 }
 
