--- a/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
+++ b/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
@@ -141,9 +141,10 @@
   color: $gray-78;
   background-color: $white;
 
-  &.violet {
+  &.yellow {
     color: $white;
-    background-color: $violet;
+    background-color: $main-yellow;
+    border: 1px solid $main-yellow;
   }
 }
 
