feat: 모달창 데이터 연동 (#44)
* style: 버튼 색 수정

* style: 버튼 색 수정

* feat: 할일 수정 모달 데이터 연동 및 progress 드롭다운 불러오기

* feat: 수정하기 모달 데이터 put

* design: 할일 생성, 수정 모달 크기 조정

* style: 할일 수정 모달창 크기 조정

* fix: 담당자 드롭다운 파일 에러 수정

--- a/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
+++ b/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
@@ -6,7 +6,8 @@
   @include Flex(column, null, null);
   gap: 32px;
   width: 584px;
-  height: auto;
+  height: 90%;
+  overflow: scroll;
   border-radius: 16px;
   padding: 32px;
   background-color: $white;
@@ -116,9 +117,10 @@
   color: $gray-78;
   background-color: $white;
 
-  &.violet {
+  &.yellow {
     color: $white;
-    background-color: $violet;
+    background-color: $main-yellow;
+    border: 1px solid $main-yellow;
   }
 }
 
