--- a/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
+++ b/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
@@ -9,7 +9,8 @@
   @include Flex(column, null, null);
   gap: 32px;
   width: 584px;
-  height: auto;
+  height: 90%;
+  overflow: scroll;
   border-radius: 16px;
   background-color: $white;
   padding: 32px;
@@ -141,9 +142,10 @@
   color: $gray-78;
   background-color: $white;
 
-  &.violet {
+  &.yellow {
     color: $white;
-    background-color: $violet;
+    background-color: $main-yellow;
+    border: 1px solid $main-yellow;
   }
 }
 
