--- a/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
+++ b/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
@@ -21,9 +21,7 @@
 }
 
 .modal-title {
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 32px;
+  @include FontStyle(2xl, 700, null, lg);
 }
 
 .status-and-owner {
@@ -114,9 +112,7 @@
   border-radius: 8px;
   border: 1px solid $gray-d9;
   padding: 14px 46px;
-  font-size: 16px;
-  line-height: 26px;
-  font-weight: 500;
+  @include FontStyle(lg, 500, null, null);
   color: $gray-78;
   background-color: $white;
 
@@ -133,12 +129,6 @@
     width: 327px;
   }
 
-  .modal-title {
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 700;
-  }
-
   .status-and-owner {
     flex-direction: column;
     gap: 32px;
@@ -147,6 +137,9 @@
   .label-and-form {
     gap: 10px;
     width: 100%;
+    &.top-form {
+      width: 100%;
+    }
   }
 
   .label-with-star {
