FIX: /mypage, /sign 페이지 수정사항 적용(코드 리뷰 피드백 적용 및 멘토링 수정) (#55)
* Feat: 로그인 및 회원가입 기능 구현

* Feat: 로그인 및 회원가입 기능 구현

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Feat: 로그인 및 회원가입 ui  구현

* Feat: /mypage 구현 및 디자인 제작

* FIX: 수정사항 적용

* FIX: 수정사항 적용(코드 리뷰 피드백 적용 및 멘토링 수정)

---------

Co-authored-by: [K777agent] <[junzang00@gmail.com]>

--- a/components/Input/PwdInput.module.scss
+++ b/components/Input/PwdInput.module.scss
@@ -1,24 +1,25 @@
-@use '@/styles/index' as *;
+@use '@/styles/index.scss' as *;
 
 .box {
   position: relative;
-  .inputWrapper {
+  .input-wrapper {
     .input {
       // 기존 input 스타일 정의
-      padding: 8px;
+      padding: 0.5rem 1rem;
       width: 100%;
       border: 1px solid #ccc;
       border-radius: 4px;
       outline: none;
       transition: border-color 0.2s;
       padding-right: 40px;
+      @include FontStyle(lg, regular);
 
       &:focus {
         border-color: #007bff;
       }
     }
 
-    .borderRed {
+    .border-red {
       border-width: 2px;
       border-color: $red;
     }
@@ -30,11 +31,10 @@
       transform: translateY(-50%); /* 수직 중앙 정렬 */
       background: transparent;
       border: none;
-      cursor: pointer;
       padding: 0; /* 기본 padding 제거 */
       margin: 0; /* 기본 margin 제거 */
 
-      @media (min-width: 768px) {
+      @include tablet {
         top: 15px;
         width: 20px;
         height: 20px;
