--- a/containers/sign/PwdLabel.module.scss
+++ b/containers/sign/PwdLabel.module.scss
@@ -10,7 +10,7 @@
   color: $black-33;
 }
 
-.inputWrapper {
+.input-wrapper {
   position: relative;
 }
 
@@ -30,7 +30,7 @@
   }
 }
 
-.inputError {
+.input-error {
   border: 2px solid $red;
 }
 
@@ -41,10 +41,9 @@
   transform: translateY(-50%); // 버튼을 세로 중앙에 위치시킵니다.
   background: none;
   border: none;
-  cursor: pointer;
 }
 
-.errorMessage {
+.error-message {
   margin-top: 2px;
   font-size: 14px;
   color: $red;
