feat: 토스트 컴포넌트 구현 (#56)
* chore: uuid 설치

* feat: 토스트 컴포넌트 구현

* style: 토스트 지속시간 수정

--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -31,3 +31,7 @@ $GRAY6: #dcdcdc;
 $BG_COLOR: #282c34;
 $WHITE: #ffffff;
 $ORANGE: #ff4500;
+
+$success-color: #53d06a;
+$error-color: #ee5c37;
+$white-fe: #fefefe;
