--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -37,3 +37,20 @@
     transform: rotate(0deg);
   }
 }
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
