FEET: 로그인, 회원가입, 비번 변경 Toast 생성 및 동의 모달 추가 (#62)
* Feat: 로그인 및 회원가입 기능 구현

* Feat: 로그인 및 회원가입 기능 구현

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Feat: 로그인 및 회원가입 ui  구현

* Feat: /mypage 구현 및 디자인 제작

* FIX: 수정사항 적용

* FIX: 수정사항 적용(코드 리뷰 피드백 적용 및 멘토링 수정)

* FEET: 로그인, 회원가입, 비번 변경 Toast 생성 및 동의 모달 추가

* Chore: z-index 변경 되돌리기

---------

Co-authored-by: [K777agent] <[junzang00@gmail.com]>

--- a/components/Input/PwdInput.module.scss
+++ b/components/Input/PwdInput.module.scss
@@ -2,44 +2,48 @@
 
 .box {
   position: relative;
+
   .input-wrapper {
-    .input {
-      // 기존 input 스타일 정의
-      padding: 0.5rem 1rem;
-      width: 100%;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      outline: none;
-      transition: border-color 0.2s;
-      padding-right: 40px;
-      @include FontStyle(lg, regular);
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
 
-      &:focus {
-        border-color: #007bff;
-      }
+  .input {
+    width: 100%;
+    max-width: 100%;
+    padding: 0.5rem 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    transition: border-color 0.2s;
+    padding-right: 40px;
+
+    @include FontStyle(lg, regular);
+
+    &:focus {
+      border-color: #007bff;
     }
 
-    .border-red {
-      border-width: 2px;
-      border-color: $red;
+    @include mobile {
+      padding: 0.5rem 0.75rem;
     }
+  }
 
-    .button {
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%); /* 수직 중앙 정렬 */
-      background: transparent;
-      border: none;
-      padding: 0; /* 기본 padding 제거 */
-      margin: 0; /* 기본 margin 제거 */
+  .border-red {
+    border: 2px solid $red;
+  }
 
-      @include tablet {
-        top: 15px;
-        width: 20px;
-        height: 20px;
-      }
-    }
+  .button {
+    position: absolute;
+    right: 10px;
+    top: 51%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
   }
 }
 
