--- a/containers/mypage/EditProfileForm.module.scss
+++ b/containers/mypage/EditProfileForm.module.scss
@@ -1,17 +1,25 @@
+// EditProfileForm.module.scss
 @use '@/styles/index.scss' as *;
 
-.Image-box {
+.container {
   display: flex;
-  flex-direction: column;
-  gap: 24px;
-  @media (min-width: 768px) {
-    flex-direction: row;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 42px;
+  @include tablet {
     gap: 16px;
   }
+}
+
+.image-box {
+  flex: 0 0 auto; // 이미지 박스 크기 고정
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   .size {
     width: 100px;
     height: 100px;
-    flex-grow: 1;
 
     @include tablet {
       width: 180px;
@@ -20,39 +28,41 @@
   }
 }
 
-.email-box {
+.form-box {
+  flex: 1; // 폼 박스가 남은 공간을 차지하도록 설정
   display: flex;
   flex-direction: column;
   gap: 16px;
 
   @include tablet {
-    flex-grow: 1;
     gap: 20px;
   }
-  .email-size {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  .input {
-    display: block;
-    width: 100%;
-    padding: 0.5rem 1rem;
-    border: 1px solid $gray-d9; /* Equivalent to border-gray-300 */
-    border-radius: 0.375rem; /* Equivalent to rounded-md */
-    background-color: $white; /* Equivalent to bg-white */
-    color: $black-4b; /* Equivalent to text-gray-700 */
-    font-size: 1rem; /* Equivalent to text-base */
-    line-height: 1.5; /* Equivalent to leading-6 */
+}
 
-    &:focus {
-      outline: 2px solid transparent;
-      outline-offset: 2px;
-      box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
-    }
+.email-size {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
-    color: $gray-9f;
+.input {
+  display: block;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border: 1px solid $gray-d9;
+  border-radius: 0.375rem;
+  background-color: $white;
+  color: $black-4b;
+  font-size: 1rem;
+  line-height: 1.5;
+
+  &:focus {
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
   }
+
+  color: $gray-9f;
 }
 
 .nickname {
@@ -66,34 +76,38 @@
     display: block;
     width: 100%;
     padding: 0.5rem 1rem;
-    border: 1px solid $gray-d9; /* border-gray-300 */
-    border-radius: 0.375rem; /* rounded-md */
-    background-color: $white; /* bg-white */
-    color: $black-4b; /* text-gray-700 */
-    font-size: 1rem; /* text-base */
-    line-height: 1.5; /* leading-6 */
+    border: 1px solid $gray-d9;
+    border-radius: 0.375rem;
+    background-color: $white;
+    color: $black-4b;
+    font-size: 1rem;
+    line-height: 1.5;
 
     &:focus {
       outline: 2px solid transparent;
       outline-offset: 2px;
-      box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6); /* focus:ring */
+      box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
     }
 
     &.invalid {
       border-width: 2px;
       border-color: $red;
+
       &:hover {
         border-color: $red;
       }
     }
+
     color: $gray-9f;
   }
+
   .nickname-text {
     position: relative;
     top: 4px;
     font-size: 0.875rem;
     line-height: 1.25rem;
     color: $red;
+
     @include tablet {
       top: 88px;
     }
@@ -102,7 +116,7 @@
 
 .button {
   > button {
-    width: 400px;
+    width: 100%;
     height: 54px;
     padding: 0;
     margin-top: 16px;
