대시보드 수정 api메서드 함수 추가 (#64)
Co-authored-by: yellowjang <166773598+yellowjang@users.noreply.github.com>

--- a/containers/dashboardEdit/EditDashboardName/EditDashboardName.module.scss
+++ b/containers/dashboardEdit/EditDashboardName/EditDashboardName.module.scss
@@ -29,6 +29,10 @@
     height: 50px;
     border: 1px solid $gray-d9;
     border-radius: 8px;
+    padding-left: 16px;
+    &:focus {
+      outline: none;
+    }
   }
 }
 
