--- a/styles/_levels.scss
+++ b/styles/_levels.scss
@@ -2,6 +2,10 @@
 
 $modal-back-index: 250;
 $modal-index: 300;
+
+$drop-down-menu: 400;
+$drop-down-list: 350;
+$input: 320;
 $toast-index: 301;
 $side-menu: 2;
 $header: 1;
