--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -22,4 +22,8 @@ $PROGRESS_COLORS: (
     background-color: $orange-f9,
     color: $orange,
   ),
+  'yellow': (
+    background-color: $back-yellow,
+    color: $main-yellow,
+  ),
 );
