버튼 스타일, 고정메뉴 기능 구현 (#73)
* fix: 버튼 스타일링 수정

* feat: 미구현 기능 개발

* fix: pr 피드백 반영(router.query)

--- a/components/ButtonSetForPagination/Button/index.module.scss
+++ b/components/ButtonSetForPagination/Button/index.module.scss
@@ -18,6 +18,7 @@
   height: inherit;
   border: 1px solid $gray-d9;
   font-family: 'Pretendard', sans-serif;
+  background: $white;
   cursor: pointer;
 
   &.left {
