--- a/components/ButtonForDashboard/index.module.scss
+++ b/components/ButtonForDashboard/index.module.scss
@@ -19,6 +19,10 @@
 
   @include ResponsivePadding(25px 20px, 24px 20px, 20px 20px);
   @include FontStyle(16, 600, 16, 14);
+
+  &:hover {
+    background: $violet-8;
+  }
 }
 
 .dashboard {
@@ -31,11 +35,21 @@
       @include Gap(8px, 6px, 4px);
     }
   }
+
+  > svg {
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .crown-size {
   @include Width(20px, 18px, 15px);
-  @include Height(16px, 14px, 12px);
+  @include Height(20px, 18px, 15px);
+
+  > svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .circle {
