--- a/components/SideMenu/index.module.scss
+++ b/components/SideMenu/index.module.scss
@@ -37,10 +37,26 @@
 .logo-icon-wrapper {
   position: relative;
 
-  @include ResponsiveWidth(29px, 29px, 24px);
-  @include ResponsiveHeight(33px, 33px, 28px);
+  @include ResponsiveWidth(144px, 144px, 36px);
+  @include ResponsiveHeight(36px, 36px, 36px);
 
-  overflow: hidden;
+  :nth-child(1) {
+    @include mobile {
+      display: none;
+    }
+  }
+
+  :nth-child(2) {
+    display: none;
+    @include mobile {
+      display: inline-block;
+    }
+  }
+
+  > svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .logo-text-wrapper {
