feat&fix: 대시보드 수정페이지 스타일링추가,무한스크롤 함수 추가, 초대하기 함수 수정, 페이지네이션 컴포넌트 추가 (#79)
* feat: 대시보드 수정페이지 스타일링

* fix: 초대모달 props 타입수정

* fix: 대시보드 생성 모달 버튼텍스트 수정

--- a/containers/dashboardEdit/DashboardEdit.module.scss
+++ b/containers/dashboardEdit/DashboardEdit.module.scss
@@ -4,4 +4,21 @@
   @include Flex(column, null, null);
   gap: 16px;
   @include ResponsivePadding(20px, 20px, 12px);
+  background-color: $gray-fa;
+  .link {
+    @include Flex(row, null, center);
+    gap: 3px;
+    svg {
+      transform: translateY(2px);
+      rotate: 180deg;
+    }
+  }
+  .delete-button-wrapper {
+    button {
+      @include ResponsiveWidth(620px, 544px, 284px);
+      background-color: $main-yellow;
+      color: white;
+      border: none;
+    }
+  }
 }
