--- a/containers/dashboardEdit/EditMember/EditMember.module.scss
+++ b/containers/dashboardEdit/EditMember/EditMember.module.scss
@@ -5,15 +5,12 @@
   @include ResponsiveWidth(620px, 544px, 284px);
   padding-top: 26px;
   @include border-radius(16px);
+  background: $white;
   .section-header {
     @include Flex(row, space-between, center);
     @include ResponsivePadding(0 28px, 0 28px, 0 20px);
     .section-header-title {
       @include FontStyle('2xl', 'bold', '2xl', 'xl');
-    }
-    .pagination {
-      @include Flex(row, null, center);
-      @include ResponsiveGap(16, 16, 12);
     }
   }
   .member-list {
