fix: dnd 콘솔 에러 수정 (#80)
* chore: hello-pangea dnd 설치

* rename: dnd 라이브러리 변경

* style: dnd 스타일 수정

--- a/containers/dashboard/id/column/Column.module.scss
+++ b/containers/dashboard/id/column/Column.module.scss
@@ -10,7 +10,7 @@
   @include ResponsiveGap(24, 24, 16);
 
   &.is-dragging-over {
-    border: 1.5px solid $main-yellow;
+    outline: 1.5px solid $main-yellow;
   }
 
   @include tablet {
