--- a/containers/dashboard/id/card/Card.module.scss
+++ b/containers/dashboard/id/card/Card.module.scss
@@ -19,7 +19,7 @@
 
   &.is-dragging {
     opacity: 0.7;
-    // border: 1px solid $main-yellow;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
 
   @include tablet {
