--- a/components/Header/HeaderDashboard/MemberList/index.module.scss
+++ b/components/Header/HeaderDashboard/MemberList/index.module.scss
@@ -22,15 +22,13 @@
   &.count4 {
     @include ResponsiveWidth(113px, 88px, 88px);
   }
-}
+  > div {
+    position: absolute;
+  }
 
-.member {
-  @include Flex(row, space-between, center);
-  position: absolute;
-  width: 38px;
-  height: 38px;
-  border: 2px solid $white;
-  border-radius: 50%;
-  color: $white;
-  background: red;
+  @for $i from 1 through 5 {
+    :nth-child(#{$i}) {
+      left: 25px * ($i - 1);
+    }
+  }
 }
