--- a/styles/mixins/_common.scss
+++ b/styles/mixins/_common.scss
@@ -104,6 +104,23 @@ $desktop-min: 1200px;
   }
 }
 
+@mixin ResponsiveMaxWidth($desktop, $tablet: null, $mobile: null) {
+  // 데스크탑에서 너비 적용
+  @include desktop {
+    max-width: #{$desktop};
+  }
+
+  // 태블릿에서 너비 적용
+  @include tablet {
+    max-width: #{$tablet};
+  }
+
+  // 모바일에서 너비 적용
+  @include mobile {
+    max-width: #{$mobile};
+  }
+}
+
 @mixin ResponsiveHeight($desktop, $tablet: null, $mobile: null) {
   // 데스크탑에서 높이 적용
   @include desktop {
