feat: 할일 모달에 카드 삭제 기능 추가 (#84)
* feat: 할일 모달에 카드 삭제 기능 추가

* fix: vscode 상 에러로 인한 코드 롤백

* fix: 롤백 후 다시 추가

--- a/containers/dashboard/id/dropdown/kebabDropdown/kebabDropdown.module.scss
+++ b/containers/dashboard/id/dropdown/kebabDropdown/kebabDropdown.module.scss
@@ -9,6 +9,31 @@
   gap: 4px;
 }
 
+.kebab-dropdown {
+  position: relative;
+
+  & > svg {
+    width: 28px;
+    height: 28px;
+    cursor: pointer;
+  }
+
+  & > article {
+    position: absolute;
+    top: 28px;
+    right: 0;
+
+    ul {
+      background-color: $white;
+    }
+  }
+}
+
+.icon {
+  width: 28px;
+  height: 28px;
+}
+
 .list {
   width: 81px;
   height: 32px;
@@ -20,7 +45,7 @@
 
   &:hover {
     cursor: pointer;
-    background-color: $violet-8;
-    color: $violet;
+    background-color: $back-yellow;
+    color: $main-yellow;
   }
 }
