fix: 수정사항 반영 (#88)
* fix: 수정사항 반영

* fix: 사이드메뉴 스타일 수정

* fix: 헤더 기능 및 스타일 수정

--- a/components/ButtonForDashboard/index.module.scss
+++ b/components/ButtonForDashboard/index.module.scss
@@ -15,13 +15,17 @@
 .dashboard-button {
   border-radius: 8px;
   background: $white;
+  transition: background-color 0.5s ease;
   color: $black-33;
 
   @include ResponsivePadding(25px 20px, 24px 20px, 20px 20px);
   @include FontStyle(16, 600, 16, 14);
 
   &:hover {
-    background: $violet-8;
+    background: $back-yellow;
+  }
+  &:active {
+    background: $main-yellow-active;
   }
 }
 
