FIX: /mypage, Toast, Modal 오류 수정 (#90)
* Feat: 로그인 및 회원가입 기능 구현

* Feat: 로그인 및 회원가입 기능 구현

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Feat: 로그인 및 회원가입 ui  구현

* Feat: /mypage 구현 및 디자인 제작

* FIX: 수정사항 적용

* FIX: 수정사항 적용(코드 리뷰 피드백 적용 및 멘토링 수정)

* FEET: 로그인, 회원가입, 비번 변경 Toast 생성 및 동의 모달 추가

* Chore: z-index 변경 되돌리기

* Chore: 복구

* FIX: /mypage, Toast, Modal 오류 수정

---------

Co-authored-by: [K777agent] <[junzang00@gmail.com]>
Co-authored-by: mxkxx1011 <100355178+mxkxx1011@users.noreply.github.com>

--- a/components/Input/PwdInput.module.scss
+++ b/components/Input/PwdInput.module.scss
@@ -13,11 +13,10 @@
     width: 100%;
     max-width: 100%;
     padding: 0.5rem 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid $gray-d9;
+    border-radius: 8px;
     outline: none;
     transition: border-color 0.2s;
-    padding-right: 40px;
 
     @include FontStyle(lg, regular);
 
