--- a/containers/mypage/EditProfileForm.module.scss
+++ b/containers/mypage/EditProfileForm.module.scss
@@ -9,6 +9,9 @@
   @include tablet {
     gap: 16px;
   }
+  @include mobile {
+    display: block;
+  }
 }
 
 .image-box {
@@ -25,6 +28,9 @@
       width: 180px;
       height: 180px;
     }
+  }
+  @include mobile {
+    display: block;
   }
 }
 
@@ -46,14 +52,13 @@
 }
 
 .input {
-  display: block;
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 8px 16px;
   border: 1px solid $gray-d9;
-  border-radius: 0.375rem;
+  border-radius: 8px;
   background-color: $white;
   color: $black-4b;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.5;
 
   &:focus {
@@ -73,15 +78,17 @@
   margin-top: 16px;
 
   .input {
-    display: block;
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 8px 16px;
     border: 1px solid $gray-d9;
-    border-radius: 0.375rem;
+    border-radius: 8px;
     background-color: $white;
-    color: $black-4b;
-    font-size: 1rem;
+    font-size: 16px;
     line-height: 1.5;
+    color: $black-4b;
+    &::placeholder {
+      color: $gray-9f;
+    }
 
     &:focus {
       outline: 2px solid transparent;
@@ -97,7 +104,6 @@
         border-color: $red;
       }
     }
-
     color: $gray-9f;
   }
 
