--- a/containers/mypage/PwdChangeForm.module.scss
+++ b/containers/mypage/PwdChangeForm.module.scss
@@ -4,16 +4,9 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  @include tablet {
+  @media (min-width: 768px) {
     gap: 20px;
     flex-grow: 1;
-  }
-
-  .label {
-    margin-top: 16px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26px;
   }
   .password {
     position: relative;
@@ -28,6 +21,5 @@
     width: 100%;
     height: 54px;
     padding: 0;
-    margin-top: 16px;
   }
 }
