--- a/containers/sign/AgreeModal.module.scss
+++ b/containers/sign/AgreeModal.module.scss
@@ -2,30 +2,17 @@
 @import '@/styles/mixins/mixinChip';
 @import '@/styles/mixins/mixinModal';
 
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  @include ModalStyle;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
 .modal {
   background-color: $white;
   padding: 20px;
   border-radius: 8px;
   max-width: 500px;
   width: 100%;
-  max-height: 80%; /* 모달의 최대 높이 설정 */
+  max-height: 40%; /* 모달의 최대 높이 설정 */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column; /* 모달 안의 요소를 세로로 정렬 */
+  @include ModalStyle;
 }
 
 .modal-content {
@@ -52,7 +39,7 @@
 
 .agree-button {
   background-color: $main-yellow;
-  color: #fff;
+  color: $white;
   border: none;
   padding: 8px 16px;
   border-radius: 8px;
